# Flet_student_control

./: .gitignore  Ideas.md  Readme.md  alembic.ini  main.py  manage.py  pyproject.toml  run.py  sample.env  test.py  token.pickle
DB/: database.py
Flet_student_control/authentication/: authentication.py
Flet_student_control/main_app/: main.py
Flet_student_control/student/: student.py
authentication/: auth_app.py  authentication.py
authentication/utils/: customs.py  handler.py
authentication/views/: login_view.py  register_view.py
db/: config.py  database.py  model.py  utils.py
db/alembic/: env.py
main_app/: main.py
main_app/utils/: handler.py
main_app/views/: welcome_view.py
pages/: __init__.py  application.py  common_views.py  dashboard.py  forgotpassword.py  home.py  login.py  register_view.py  signup.py  student_page.py  welcome.py
pages/student_pages/: __init__.py  grades_page.py  home_page.py  student_page.py
pages/subpage/: __init__.py  courses_page.py  grades_page.py  student_page.py  student_welcome_page.py  task_page.py
pages/teacher/: __init__.py  teacher_main.py  teacher_students.py
service/: auth.py
sql scripts/: create_tables.sql  get_data_example.sql  get_user_subject.sql  insert_data_tables.sql  test.sql
student/: student.py
student/utils/: handler.py
utils/: __init__.py  application_util.py  application_utils.py  banners.py  base_app.py  colors.py  constants.py  customs.py  exception.py  handler.py  handler_base.py  jwt_hash.py  sidebar.py  validation.py
views/: application.py  common_views.py
(+48 files in other folders)
