[tool.poetry]
name = "flet-student-control"
version = "0.1.0"
description = ""
authors = ["spike <azamtoiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.14.0"
flet-material = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
