[tool.poetry]
name = "flet-student-control"
version = "0.1.0"
description = ""
authors = ["spike <azamtoiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.14.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"
flet-material = "^0.3.3"
alembic = "^1.13.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
